--- a/project.html
+++ b/project.html
@@ -14,16 +14,16 @@
 <div class="navbar">
 <img src="file:///C:/Users/farid/Desktop/logo-removebg-preview.png" class="logo">
 <ul>
-<li><a href="#">HOME</a></li>
-<li><a href="#">ABOUT</a></li>
-<li><a href="#">SPECIFICATIONS</a></li>
-<li><a href="#">PRODUCTS</a></li>
+<li><a onclick="window.location.href='https://www.etsy.com/market/home_of_music';">HOME</a></li>
+<li><a onclick="window.location.href='https://music.com/about';">ABOUT</a></li>
+<li><a onclick="window.location.href='https://totalproaudio.stevebunting.com/';">SPECIFICATIONS </a></li>
+<li><a onclick="window.location.href='https://www.spotify.com';">MORE MUSIC</a></li>
 <li><a href="#">CONNECT</a></li>
 </ul>
 </div>
 <div class="content">
 	<div class="left-col">
-		<h1>THE<br> REAL<br> SOUND</h1>
+		<h1>MUSIC <br> IS <br> MAGIC </h1>
 	</div>
 	<div class="right-col">
 		<p>click here to listen</p>
